finished all the style and add script for input validation

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign In Form</title>
     <link rel="stylesheet" href="style.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Silkscreen:wght@400;700&family=Sixtyfour+Convergence&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="container">
@@ -25,7 +29,7 @@
     
                 <div class="main-form">
                     <h1>Let's do this!</h1>
-                    <form id="my-form" method="get">
+                    <form id="my-form">
                         <div class="form-1">
                             <label for="fname">First Name</label>
                             <input type="text" name="fname" id="fname" required>
@@ -58,5 +62,7 @@
             </div>
         </div>
     </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
